(fix) Evenly distribute Action menu items on tablet
The action menu extension items (Order basket, Visit note, Clinical forms
and Patient lists) were left-aligned instead of evenly distributed across
the bottom bar on tablet layouts. This fix sets a `flex: 1` property on
the child divs in the action menu container to stretch items across the full
width.

--- a/packages/framework/esm-styleguide/src/workspaces2/action-menu2/action-menu2.module.scss
+++ b/packages/framework/esm-styleguide/src/workspaces2/action-menu2/action-menu2.module.scss
@@ -72,6 +72,10 @@ $actionPanelOffset: layout.$spacing-09;
     align-items: center;
     width: 100%;
     flex: 1;
+
+    > div {
+      flex: 1;
+    }
   }
 }
 
